Added two new roles: miner and carrier. Together they basically replace the harvester.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/kaaku/screeps#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-screeps": "^1.2.1"
+    "grunt-screeps": "^1.2.1",
+    "lodash": "~3.10"
   }
 }
